# Rust-Roadmap

./: README.md
01 - Sintaxe Basica/: Cargo.toml  README.md  ex01.rs  ex02.rs  ex03.rs  ex04.rs  ex05.rs  ex06.rs  ex07.rs  ex08.rs  ex09.rs  ex10.rs  ex11.rs  ex12.rs  ex13.rs  ex14.rs  ex15.rs  ex16.rs  ex17.rs
02 - Sistema de Ownership/: Cargo.toml  README.md  ex02.rs  ex03.rs
03 - Tipos Complexos/: Cargo.toml  README.md  ex01.rs  ex02.rs  ex03.rs  ex04.rs  ex05.rs  ex06.rs  ex07.rs
04 - Programação Funcional/: Cargo.toml  README.md  ex01.rs  ex02.rs  ex03.rs  ex04.rs  ex05.rs  ex06.rs  ex07.rs  ex08.rs  ex09.rs  ex10.rs
05 - Structs/: Cargo.toml  Ex01.rs  Ex02.rs  Ex03.rs  Ex04.rs  Ex05.rs  Ex06.rs  Ex07.rs  Ex08.rs  Ex09.rs  Ex10.rs  Ex11.rs  Ex12.rs  Ex13.rs  README.md
06 - Traits/: Cargo.toml  Ex01.rs  Ex02.rs  Ex03.rs  Ex04.rs  Ex05.rs  Ex06.rs  Ex07.rs  Ex08.rs  Ex09.rs  Ex10.rs  Ex11.rs  Ex12.rs  Ex13.rs  Ex14.rs  Ex15.rs  Ex16.rs  Ex17.rs  Ex18.rs  Ex19.rs  Ex20.rs  Ex21.rs  Ex22.rs  Ex23.rs  Readme.md
07 - Lidando com Erros/: Cargo.toml  README.md  ex01.rs  ex02.rs  ex04.rs  ex05.rs  ex06.rs
Funcoes/: A_FiltrarNumerosPares.rs  B_Calculadora.rs  C_FiltrarStrings.rs  Cargo.toml
Fundamentos/: A_hello_word.rs  B_Contador.rs  B_Conversor_de_Temperatura.rs  Cargo.toml
GerindoMemoria/: A_Maior_Numero.rs  B_PilhaDeNumeros.rs  C_ReferenciaMutavel.rs  Cargo.toml
Poo/: B_Desconto.rs  C_Polimorfismo.rs  Cargo.toml  Descritivo.rs
Projetos/: Cargo.toml
TiposDeDadosComplexos/: A_Pessoa.rs  B_MenorValor.rs  C_SistemaDeLogin.rs  Cargo.toml
Topico 1 - Introdução/: Cargo.toml  README.md
(+3 files in other folders)
